# BlockTemp

./: CMakeLists.txt  EasyAxisEnergy.cpp  EasyAxisEnergy.h  ExternalEnergy.cpp  ExternalEnergy.h  InteractionEnergy.cpp  InteractionEnergy.h  Moments.cpp  Moments.h  MonteCarlo.cpp  MonteCarlo.h  PhiThetaSurface.cpp  PhiThetaSurface.h  README.md  Tests.cpp  main.cpp  main_edited.cpp  mylibr.h  operations.cpp  operations.h  positioning.cpp  profile.h  test_runner.h
